# sokkia_weekrollover_fix

./: ..gitignore.un~  .gitignore  .gitignore.swp  .gitignore~  .requirements.txt.swp  README.md  change_rinex_obs_date.py  gui_improvements.md  logger.py  modify_rinex_obs_date.py  pyproject.toml  rinex_filename_fixer.py  rinex_fixer.py  rinex_gpsweek.py  rinex_gui.config  rinex_gui.py
arquivos/: 00062970.25O  00062970.25O.ORIGINAL  00451420.25O
arquivos/dadosgnss/: 00451420.25G  00451420.25N  00451420.25O
utils/: binary_manager.py  setup_binaries.py
